bpo-31393: Fix the use of PyUnicode_READY(). (#3451)